--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,15 +4,46 @@
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-spring.datasource.test1.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.test1.url = jdbc:mysql://localhost:3306/test01?serverTimezone=GMT&useUnicode=true&characterEncoding=utf-8
-spring.datasource.test1.username = root
-spring.datasource.test1.password = root
+#spring.datasource.test1.driverClassName = com.mysql.cj.jdbc.Driver
+#spring.datasource.test1.url = jdbc:mysql://localhost:3306/test01?serverTimezone=GMT&useUnicode=true&characterEncoding=utf-8
+#spring.datasource.test1.username = root
+#spring.datasource.test1.password = root
 
-spring.datasource.test2.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.test2.url = jdbc:mysql://localhost:3306/test02?serverTimezone=GMT&useUnicode=true&characterEncoding=utf-8
-spring.datasource.test2.username = root
-spring.datasource.test2.password = root
+#spring.datasource.test2.driverClassName = com.mysql.cj.jdbc.Driver
+#spring.datasource.test2.url = jdbc:mysql://localhost:3306/test02?serverTimezone=GMT&useUnicode=true&characterEncoding=utf-8
+#spring.datasource.test2.username = root
+#spring.datasource.test2.password = root
+
+
+# Mysql 1
+mysql.datasource.test1.url = jdbc:mysql://localhost:3306/test01?serverTimezone=GMT&useUnicode=true&characterEncoding=utf-8
+mysql.datasource.test1.username = root
+mysql.datasource.test1.password = root
+
+mysql.datasource.test1.minPoolSize = 3
+mysql.datasource.test1.maxPoolSize = 25
+mysql.datasource.test1.maxLifetime = 20000
+mysql.datasource.test1.borrowConnectionTimeout = 30
+mysql.datasource.test1.loginTimeout = 30
+mysql.datasource.test1.maintenanceInterval = 60
+mysql.datasource.test1.maxIdleTime = 60
+mysql.datasource.test1.testQuery = select 1
+
+
+# Mysql 2
+mysql.datasource.test2.url =jdbc:mysql://localhost:3306/test02?serverTimezone=GMT&useUnicode=true&characterEncoding=utf-8
+mysql.datasource.test2.username =root
+mysql.datasource.test2.password =root
+
+mysql.datasource.test2.minPoolSize = 3
+mysql.datasource.test2.maxPoolSize = 25
+mysql.datasource.test2.maxLifetime = 20000
+mysql.datasource.test2.borrowConnectionTimeout = 30
+mysql.datasource.test2.loginTimeout = 30
+mysql.datasource.test2.maintenanceInterval = 60
+mysql.datasource.test2.maxIdleTime = 60
+mysql.datasource.test2.testQuery = select 1
+
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              
 
 server.port = 80
